Segmentation fault crash starting Blender 2.8 under Linux #55802

Closed
opened 2018-07-06 22:46:01 +02:00 by Enrico Valenza · 21 comments

System Information
Ubuntu 15.04 64 bit - Nvidia Geforce GT 320M

Blender Version
Broken: blender-2.80-53c63db2ee1-linux-glibc219-x86_64
Worked: (optional) night builds from some month ago

Blender 2.8 just don't open, it crashes at start with segmentation fault; here following I pasted the console output:

env@env-K50ID:~$ '/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/blender'
Received X11 Error:
error code: 8
request code: 154
minor code: 34
error text: BadMatch (invalid parameter attributes)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 8
request code: 154
minor code: 34
error text: BadMatch (invalid parameter attributes)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
Received X11 Error:
error code: 2
request code: 154
minor code: 34
error text: BadValue (integer parameter out of range for operation)
found bundled python: /home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/python
(2, 74, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_scene_3ds' has not been upgraded to 2.8, ignoring
(2, 79, 1)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_scene_fbx' has not been upgraded to 2.8, ignoring
(2, 74, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_anim_bvh' has not been upgraded to 2.8, ignoring
(2, 74, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_mesh_ply' has not been upgraded to 2.8, ignoring
(2, 78, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_scene_obj' has not been upgraded to 2.8, ignoring
(2, 76, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_scene_x3d' has not been upgraded to 2.8, ignoring
(2, 74, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_mesh_stl' has not been upgraded to 2.8, ignoring
(2, 75, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_mesh_uv_layout' has not been upgraded to 2.8, ignoring
(2, 57, 0)
Traceback (most recent call last):

File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable
  raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring")

Exception: Add-on 'io_curve_svg' has not been upgraded to 2.8, ignoring
(2, 80, 0)
CUDA cuInit: Unknown error
GPUShader: compile error:
(0) : error C7011: implicit cast from "int" to "ivec2"

GPUShader: compile error:
(0) : error C7011: implicit cast from "int" to "ivec2"

Writing: /tmp/blender.crash.txt
Errore di segmentazione ("segmentation fault")

Also attached is the blender.crash.txt{F3892895}

**System Information** Ubuntu 15.04 64 bit - Nvidia Geforce GT 320M **Blender Version** Broken: blender-2.80-53c63db2ee1-linux-glibc219-x86_64 Worked: (optional) night builds from some month ago Blender 2.8 just don't open, it crashes at start with segmentation fault; here following I pasted the console output: ------------------------------ env@env-K50ID:~$ '/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/blender' Received X11 Error: error code: 8 request code: 154 minor code: 34 error text: BadMatch (invalid parameter attributes) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 8 request code: 154 minor code: 34 error text: BadMatch (invalid parameter attributes) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) Received X11 Error: error code: 2 request code: 154 minor code: 34 error text: BadValue (integer parameter out of range for operation) found bundled python: /home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/python (2, 74, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_scene_3ds' has not been upgraded to 2.8, ignoring (2, 79, 1) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_scene_fbx' has not been upgraded to 2.8, ignoring (2, 74, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_anim_bvh' has not been upgraded to 2.8, ignoring (2, 74, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_mesh_ply' has not been upgraded to 2.8, ignoring (2, 78, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_scene_obj' has not been upgraded to 2.8, ignoring (2, 76, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_scene_x3d' has not been upgraded to 2.8, ignoring (2, 74, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_mesh_stl' has not been upgraded to 2.8, ignoring (2, 75, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_mesh_uv_layout' has not been upgraded to 2.8, ignoring (2, 57, 0) Traceback (most recent call last): ``` File "/home/env/blender_download/blender-2.80-53c63db2ee1-linux-glibc219-x86_64/2.80/scripts/modules/addon_utils.py", line 359, in enable raise Exception(f"Add-on '{module_name:s}' has not been upgraded to 2.8, ignoring") ``` Exception: Add-on 'io_curve_svg' has not been upgraded to 2.8, ignoring (2, 80, 0) CUDA cuInit: Unknown error GPUShader: compile error: (0) : error C7011: implicit cast from "int" to "ivec2" GPUShader: compile error: (0) : error C7011: implicit cast from "int" to "ivec2" Writing: /tmp/blender.crash.txt Errore di segmentazione ("segmentation fault") ------------------------------ Also attached is the blender.crash.txt{[F3892895](https://archive.blender.org/developer/F3892895/blender.crash.txt)}
Author

Added subscriber: @envval

Added subscriber: @envval

Added subscriber: @mont29

Added subscriber: @mont29

Please do not paste walls of text like that directly in reports/comments, such reports must be attached as text files instead.
Also try again with latest 2.8 build, and ensure you are using latest official GPU drivers from NVidia (not the open source ones).

Please do not paste walls of text like that directly in reports/comments, such reports must be attached as text files instead. Also try again with latest 2.8 build, and ensure you are using latest official GPU drivers from NVidia (not the open source ones).
Author

blender.crash.txt

Hi Bastien,
my apologies for the wall of text, not my intention. :)

Just tried with the last build (blender-2.80-1882dfc47c1-linux-glibc219-x86_64), I'm using official drivers from Nvidia (so no open source drivers) but I still have segmentation fault at start. Btw, until the main "remaking" of the UI, Blender 2.8 worked like a charm on my system.
Attached is the new crash text file.

[blender.crash.txt](https://archive.blender.org/developer/F4047836/blender.crash.txt) Hi Bastien, my apologies for the wall of text, not my intention. :) Just tried with the last build (blender-2.80-1882dfc47c1-linux-glibc219-x86_64), I'm using official drivers from Nvidia (so no open source drivers) but I still have segmentation fault at start. Btw, until the main "remaking" of the UI, Blender 2.8 worked like a charm on my system. Attached is the new crash text file.
Author

I could investigate and last version of Blender 2.8 that worked (and still does) under my system was night build 8b74741b9e of 2018-03-30.

I could investigate and last version of Blender 2.8 that worked (and still does) under my system was night build 8b74741b9e of 2018-03-30.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2018-08-09 11:57:14 +02:00

Thanks for the report, but afaik GT 320m only supports OpenGL 2.1, we now require at the very least 3.1 iirc, so height years old low-end GPUs are no more an option…

Thanks for the report, but afaik GT 320m only supports OpenGL 2.1, we now require at the very least 3.1 iirc, so height years old low-end GPUs are no more an option…
Author

No, accordingly to Nvidia site GT 320M supports OpenGL 3.2. This has also already clarified by Brecht in a earlier (very similar) occasion.

No, accordingly to Nvidia site GT 320M supports OpenGL 3.2. This has also already clarified by Brecht in a earlier (very similar) occasion.

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Yes, I think this card supports OpenGL 3.3 with the latest drivers.

From the first report it looks like some error in compiling shaders. Can you attach the output of running this with a recent build, so we get more detailed info?

./blender --debug-gpu --debug-gpu-shaders --factory-startup &> startup-log.txt

Also useful would be to attach Help > System Info saved from Blender 2.79, so we can see the exact driver version.

Yes, I think this card supports OpenGL 3.3 with the latest drivers. From the first report it looks like some error in compiling shaders. Can you attach the output of running this with a recent build, so we get more detailed info? ``` ./blender --debug-gpu --debug-gpu-shaders --factory-startup &> startup-log.txt ``` Also useful would be to attach Help > System Info saved from Blender 2.79, so we can see the exact driver version.
Author

Hi Brecht,
ok, here attached is what you requested.
Thanks.

blender.crash.txt

system-info.txt

Hi Brecht, ok, here attached is what you requested. Thanks. [blender.crash.txt](https://archive.blender.org/developer/F4173895/blender.crash.txt) [system-info.txt](https://archive.blender.org/developer/F4173896/system-info.txt)
Author

I forgot: with today build "blender-2.80-2e10c658f42-linux-glibc219-x86_64".

I forgot: with today build "blender-2.80-2e10c658f42-linux-glibc219-x86_64".

Sorry if I wasn't clear, I meant the startup-log.txt produced by running that command, which hopefully has more details than the backtrace.

Sorry if I wasn't clear, I meant the `startup-log.txt` produced by running that command, which hopefully has more details than the backtrace.
Author

I think you have been clear, that is the result of running the "./blender --debug-gpu --debug-gpu-shaders --factory-startup &> startup-log.txt" command string in the console after entering the blender 2.8 directory... something I have to do differently (you know, I'm very bad at linux scripting and stuff)?

I think you have been clear, that is the result of running the "./blender --debug-gpu --debug-gpu-shaders --factory-startup &> startup-log.txt" command string in the console after entering the blender 2.8 directory... something I have to do differently (you know, I'm very bad at linux scripting and stuff)?

Yes, there should be a file named startup-log.txt that you can attach here.

Yes, there should be a file named startup-log.txt that you can attach here.
Author

Of course you are right. :)
Here it is.

startup-log.txt

Of course you are right. :) Here it is. [startup-log.txt](https://archive.blender.org/developer/F4183068/startup-log.txt)

Added subscriber: @fclem

Added subscriber: @fclem

This shader error seems like a driver bug related to textureGather() in the object_outline_detect_frag.glsl shader. The error happens on line (0), which doesn't really make sense and probably means it's in some code generated by the driver.

There's a similar error here, where the workaround was to disable textureGather() on NVIDIA:
https://github.com/Unvanquished/Unvanquished/issues/919

@fclem, It appears the 340.x driver is the latest supported NVIDIA driver versions for this GPU, so it seems this will not be fixed anymore. Perhaps we can add a workaround to disable texture gather on such old NVIDIA drivers? Maybe any NVIDIA GPU with OpenGL version < 4 or something like that.

This shader error seems like a driver bug related to `textureGather()` in the `object_outline_detect_frag.glsl` shader. The error happens on line (0), which doesn't really make sense and probably means it's in some code generated by the driver. There's a similar error here, where the workaround was to disable `textureGather()` on NVIDIA: https://github.com/Unvanquished/Unvanquished/issues/919 @fclem, It appears the 340.x driver is the latest supported NVIDIA driver versions for this GPU, so it seems this will not be fixed anymore. Perhaps we can add a workaround to disable texture gather on such old NVIDIA drivers? Maybe any NVIDIA GPU with OpenGL version < 4 or something like that.

This issue was referenced by 822de6e9e1

This issue was referenced by 822de6e9e1b87e2ed3571e7166281fa622c28c02

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55802
No description provided.