source/blender/draw/modes/object_mode.c
@@ -377,14 +377,13 @@ static void OBJECT_engine_init(void *vedata)
 		            datatoc_common_fullscreen_vert_glsl, NULL,
 		            datatoc_object_outline_detect_frag_glsl,
 		            datatoc_common_globals_lib_glsl,
-		            "#extension GL_ARB_texture_gather : enable\n");
+		            NULL);
 
 		e_data.outline_detect_wire_sh = DRW_shader_create_with_lib(
 		            datatoc_common_fullscreen_vert_glsl, NULL,
 		            datatoc_object_outline_detect_frag_glsl,
 		            datatoc_common_globals_lib_glsl,
-		            "#define WIRE\n"
-		            "#extension GL_ARB_texture_gather : enable\n");
+		            "#define WIRE\n");
 
 
 		e_data.outline_fade_sh = DRW_shader_create_fullscreen(datatoc_object_outline_expand_frag_glsl, NULL);
